feat: :sparkles: columna central
funcionalidades en las cuales destacan perfil profesional,formacion academica,proyectos y experiencia laboral

--- a/index.html
+++ b/index.html
@@ -72,5 +72,79 @@
       </div>
     </div>
 
+ <!-- Columna Central -->
+    <div class="columna columna-central">
+      <h2>Perfil Profesional</h2>
+      <div class="education-item">
+        Estudiante de programación con sólida experiencia en marketing y publicidad. Combino habilidades técnicas y creativas para desarrollar soluciones digitales innovadoras que mejoran la visibilidad y optimizan el rendimiento de proyectos. Apasionado por la tecnología y el desarrollo de software.
+      </div>
+
+      <h2>Formación Académica</h2>
+      <div class="education-item">
+        <div class="item-title">Técnico en Programación</div>
+        <div class="item-meta">
+          <a href="https://campuslands.com/" class="social-link2" target="_blank">💻 Campusland</a>
+          <span class="meta-tag">En curso</span>
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="item-title">Técnico en Comercialización de Productos Masivos</div>
+        <div class="item-meta">
+          <a href="https://www.sena.edu.co/es-co/Paginas/default.aspx" class="social-link2" target="_blank">🧑‍💻 SENA</a>
+          <span class="meta-tag">Completado</span>
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="item-title">Bachillerato</div>
+        <div class="item-meta">
+          <a href="https://coldini.edupage.org/" class="social-link2" target="_blank">🎓 Colegio Integrado Divino Niño</a>
+          <span class="meta-tag">Básica Primaria y Secundaria</span>
+        </div>
+      </div>
+
+      <h2>Proyectos Destacados</h2>
+      <div class="project-item">
+        <div class="item-title">Liga Betplay</div>
+        <div class="item-meta">
+          <span class="meta-tag">Python</span>
+          <span class="meta-tag">JSON</span>
+          <span class="meta-tag">Gestión de Datos</span>
+        </div>
+        <div class="item-description">
+          Desarrollo de una aplicación modular en Python para la gestión integral de ligas, equipos, jugadores, transferencias y estadísticas. El sistema incluye validaciones avanzadas, persistencia de datos en JSON y un menú interactivo para la ejecución de operaciones.
+        </div>
+        <a href="https://github.com/juliansantamaria0/liga.git" class="project-link" target="_blank">
+          Ver Repositorio →
+        </a>
+      </div>
+
+      <div class="project-item">
+        <div class="item-title">Sistema de Gestión de Colecciones Multimedia</div>
+        <div class="item-meta">
+          <span class="meta-tag">Python</span>
+          <span class="meta-tag">CRUD</span>
+          <span class="meta-tag">Arquitectura Modular</span>
+        </div>
+        <div class="item-description">
+          Aplicación modular para la administración de elementos como libros, música y películas, con operaciones CRUD completas. Incluye búsqueda, filtrado, ordenamiento y persistencia de datos en formato JSON. Arquitectura organizada en controladores, utilidades y modelos.
+        </div>
+        <a href="https://github.com/juliansantamaria0/Proyecto_Python_SantamariaJulian.git" class="project-link" target="_blank">
+          Ver Repositorio →
+        </a>
+      </div>
+
+      <h2>Experiencia Laboral</h2>
+      <div class="experience-item">
+        <div class="item-title">Etapa Productiva - Desarrollador</div>
+        <div class="item-meta">
+          <span class="meta-tag">Actual</span>
+        </div>
+        <a href="https://solvoglobal.com/" class="social-link2" target="_blank">🌐 Solvoglobal</a>
+      </div>
+    </div>
+
+
 </body>
 </html>
