feat: :sparkles: columna derecha
se agrega la columna derecha con informacion de habilidades tecnicas,competencias,certificaciones y el video de presentacion

--- a/index.html
+++ b/index.html
@@ -145,6 +145,81 @@
       </div>
     </div>
 
+    <!-- Columna Derecha -->
+    <div class="columna columna-derecha">
+      <h2>Habilidades Técnicas</h2>
+      
+      <div class="skill-item">
+        <div class="skill-name">Python</div>
+        <div class="skill-level">Básico - Intermedio</div>
+        <div class="skill-bar">
+          <div class="skill-progress" style="width: 50%;"></div>
+        </div>
+      </div>
+
+      <div class="skill-item">
+        <div class="skill-name">Git & GitHub</div>
+        <div class="skill-level">Básico</div>
+        <div class="skill-bar">
+          <div class="skill-progress" style="width: 45%;"></div>
+        </div>
+      </div>
+
+      <div class="skill-item">
+        <div class="skill-name">Metodología Scrum</div>
+        <div class="skill-level">Básico</div>
+        <div class="skill-bar">
+          <div class="skill-progress" style="width: 40%;"></div>
+        </div>
+      </div>
+
+      <div class="skill-item">
+        <div class="skill-name">Marketing Digital</div>
+        <div class="skill-level">Intermedio</div>
+        <div class="skill-bar">
+          <div class="skill-progress" style="width: 75%;"></div>
+        </div>
+      </div>
+
+      <h2>Competencias</h2>
+      <div class="skill-item">
+        <div class="info-item">
+          <span class="label">🚀 Desarrollo de Software</span>
+          <span class="value">Aplicaciones modulares y escalables</span>
+        </div>
+        <div class="info-item">
+          <span class="label">🎯 Marketing Digital</span>
+          <span class="value">Estrategias y publicidad online</span>
+        </div>
+        <div class="info-item">
+          <span class="label">🔧 Resolución de Problemas</span>
+          <span class="value">Pensamiento analítico y creativo</span>
+        </div>
+        <div class="info-item">
+          <span class="label">🤝 Trabajo en Equipo</span>
+          <span class="value">Comunicación asertiva y colaboración</span>
+        </div>
+      </div>
+
+      <h2>Certificaciones</h2>
+      <div class="skill-item">
+        <div class="info-item">
+          <span class="label">🎓 SENA</span>
+          <span class="value">Comercialización de Productos</span>
+        </div>
+        <div class="info-item">
+          <span class="label">💻 Campusland</span>
+          <span class="value">Programación (En curso)</span>
+        </div>
+      </div>
+
+      <div class="video-section">
+        <h3>🎥 Video de Presentación</h3>
+        <video controls class="presentation-video">
+          <source src="images/0831.mp4" type="video/mp4">
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
